tetrate/tis1301/.chainsaw-test/bad-resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-bad
  namespace: default
spec:
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app-bad
    spec:
      containers:
      - name: my-app-container
        image: my-app-image
