tetrate/tis1301/.chainsaw-test/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ensure-deployment-has-authorization-policy
spec:
  validationFailureAction: Enforce
