tetrate/tis1301/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: ensure-deployment-has-authorization-chainsaw
spec:
  steps:
    - name: apply-rbac-policy
      try:
        - apply:
            file: rbac-policy.yaml

    - name: apply-ensure-deployment-has-authorization-policy
      try:
        - apply:
            file: ../ensure-deployment-has-authorization-policy.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-authorizationpolicy
      try:
        - apply:
            file: authorizationpolicy.yaml

    - name: apply-good-deployment
      try:
        - apply:
            file: good-resource.yaml


    - name: apply-bad-deployment (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
